# example

./: README.md  build.gradle  settings.gradle  version.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: test.dex
app/src/main/res/layout/: activity_main.xml  item_activity_main.xml
base/: build.gradle
base/src/main/: AndroidManifest.xml
base/src/main/res/drawable/: click_white_grey.xml
base/src/main/res/values/: colors.xml  dimens.xml  themes.xml
document/android3/armv7-a/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
document/android3/armv8-a/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
document/android3/x86-64/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
document/android3/x86/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
gradle/wrapper/: gradle-wrapper.properties
library-asm/src/main/: AndroidManifest.xml
library-av/: build.gradle
library-av/src/main/: AndroidManifest.xml  CMakeLists.txt
library-av/src/main/cpp/: AVPlayer.cpp  AVPlayer.h  av-lib.cpp  util.h
library-av/src/main/java/com/cmq/av/: AVActivity.java  AVPlayer.java
library-dex/: build.gradle
library-dex/src/main/: AndroidManifest.xml
library-method/: build.gradle
library-method/src/main/: AndroidManifest.xml  CMakeLists.txt
library-method/src/main/cpp/: Method-lib.cpp
library-player/: build.gradle
library-player/src/main/: AndroidManifest.xml  CMakeLists.txt
library-player/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  Channel.cpp  Channel.h  ConcurrentQueue.cpp  ConcurrentQueue.h  JavaHolder.cpp  JavaHolder.h  JavaPlayerHolder.cpp  JavaPlayerHolder.h  Player-lib.cpp  Player.cpp  Player.h  VideoChannel.cpp  VideoChannel.h
library-skin/: build.gradle
library-skin/src/main/: AndroidManifest.xml
test-av/: build.gradle
test-av/src/main/: AndroidManifest.xml
test-dex/: build.gradle
test-dex/src/main/: AndroidManifest.xml
test-dex/src/main/assets/: repair.dex
test-skin/: build.gradle
test-skin-resource/: build.gradle
test-skin/src/main/: AndroidManifest.xml
test-skin/src/main/assets/: skin.apk
(+70 files in other folders)
